# rust_iot

./: .dockerignore  Cargo.toml  README.md  cobertura.xml  codecov.yml  makefile
.github/workflows/: ci.yml
.k8s/: Dockerfile.amqp  Dockerfile.grpc  Dockerfile.http  docker-compose.yml  mosquitto.deployment.yml  mqtt.bridge.deployment.yml  rabbitmq.deployment.yml
.k8s/dockerfiles/: Dockerfile.amqp  Dockerfile.api  Dockerfile.dummy  Dockerfile.dump  Dockerfile.grpc  Dockerfile.hhttp  Dockerfile.mqtt  docker-compose.yml  mosquitto.conf
app/: Cargo.toml
app/src/: lib.rs
app/src/consume_iot_msgs/: mod.rs
app/src/delivery_iot_msgs/: mod.rs
app/src/grpc_services/: mod.rs
docker/: Dockerfile  docker-compose.yml  mosquitto_password.txt
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/amqp/: client.rs  mod.rs  topology.rs  types.rs
infra/src/database/: mod.rs
infra/src/env/: configs.rs  mod.rs
infra/src/errors/: amqp.rs  mod.rs  mqtt.rs
infra/src/logging/: mod.rs
infra/src/mqtt/: client.rs  mod.rs  types.rs
infra/src/otel/: amqp.rs  metrics.rs  mod.rs  tracing.rs
infra/src/repositories/: iot_repository.rs  mod.rs
infra/src/tracing/: mod.rs
intr_grpc/: Cargo.toml
intr_mqtt/: Cargo.toml
intr_mqtt/src/: main.rs
intr_mqtt/src/controllers/: iot_temp.rs  mod.rs
intr_mqtt/src/viewmodels/: mod.rs
p_mqtt/src/controllers/: iot.rs
s.amqp/: Cargo.toml
s.amqp/src/: main.rs
s.amqp/src/consumers/: iot.rs
s.dummy/: Cargo.toml
s.dummy/src/: main.rs
s.dummy/src/consumers/: something.rs
s.dump/: Cargo.toml
s.dump/src/: main.rs
s.grpc/: Cargo.toml  README.md  build.rs
s.grpc/protos/: helloworld.proto
s.grpc/src/: main.rs
s.grpc/src/protos/: helloworld.rs  iot.rs
s.grpc/src/services/: iot.rs
s.http/: Cargo.toml
s.http/src/: main.rs
s.http/src/controllers/: iot_controller.rs  mod.rs
s.http/src/errors/: iot.rs  mod.rs
s.http/src/middlewares/: default.rs  deserializer.rs
s.http/src/viewmodels/: iot_viewmodel.rs  mod.rs
s.mqtt/: Cargo.toml
s.mqtt/src/: main.rs
s.mqtt/src/container/: mod.rs
s.mqtt/src/controllers/: iot.rs  mod.rs
s.proto/: Cargo.toml  build.rs
s.proto/protos/: iot.proto
s.proto/src/: lib.rs
src/: main.rs
