[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
async-trait = { version = "0.1.56" }
bytes = { version = "1.2.0", features = ["serde"] }
rumqttc = { version =  "0.13.0" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
tracing-appender = { version = "0.2.2" }
tracing-subscriber = { version = "0.3.15" }
tracing = { version = "0.1.35" }
tracing-log = { version = "0.1.3" }
tracing-bunyan-formatter = { version = "0.3.3" }
log = { version = "0.4.17" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic"] }
tonic = { version = "0.6.2" }
thiserror = "1.0.31"

[dev-dependencies]
mockall = { version = "0.11.2" }

