[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# my-secret-crate = { git = "ssh://git@github.com/hedrosistemas/pkg_rustkit.git", branch = "main" }
async-trait = { version = "0.1.56" }
bytes = { version = "1.2.0", features = ["serde"] }
rumqttc = { version =  "0.13.0" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
tracing-appender = { version = "0.2.2" }
tracing-subscriber = "0.3.15"
tracing = { version = "0.1.35" }
tracing-log = { version = "0.1.3" }
tracing-bunyan-formatter = { version = "0.3.3" }
log = { version = "0.4.17" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics", "tokio"] }
opentelemetry-otlp = { version = "0.10.0", features = ["tonic", "metrics", "tls", "tls-roots"] }
tonic = { version = "0.6.2" }
tokio = { version = "1.17.0" }
thiserror = { version = "1.0.31" }
lapin = { version = "2.1.1" }
futures-util = { version = "0.3.21"}
uuid = { version = "1.1.2", features = ["v4"] }
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.17.4"

[dev-dependencies]
mockall = { version = "0.11.2" }

