[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }

bytes = { version = "1.2.0", features = ["serde"] }
rumqttc = { version =  "0.13.0" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
tokio = { version = "1", features = ["full"] }
