[package]
name = "my-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = { version = "2.26" }
grpc = { version = "~0.8" }
grpc-protobuf = { version = "0.8.3" }
tonic = { version = "0.8.0" }
prost = { version = "0.11.0" }
tokio = { versin = "1.7.0", features = ["full"] }

[build-dependencies]
protobuf-codegen = "3.1.0"
protoc-rust-grpc = "~0.8"