[package]
name = "ggrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
infra = { path = "../infra" }
app = { path = "../app" }
protos = { path = "../s.proto" }
tonic = { version = "0.8.0" }
prost = { version = "0.11.0" }
tokio = { versin = "1.7.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres" ] }
opentelemetry = { version = "0.17.0" }
log = { version = "0.4.17" }