[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { path = "../app" }
infra = { path = "../infra" }

bytes = { version = "1.2.0", features = ["serde"] }
rumqttc = { version =  "0.13.0" }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = { version = "1.0.82" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.17" }
lazy_static = { versin = "1.4.0" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics", "tokio"] }